--- a/xxys.conf
+++ b/xxys.conf
@@ -3,3 +3,4 @@ hostname=*.wangbiwu.com,a1235.hnhx360.com,utoken.umeng.com
 ^https:\/\/a1235\.hnhx360\.com\/getGlobalData     url script-response-body https://raw.githubusercontent.com/cefv12/cefv/111/guankan.js
 ^https:\/\/utoken\.umeng\.com\/api\/updateZdata\/v2  url script-response-body https://raw.githubusercontent.com/cefv12/cefv/111/guankan.js
 ^https:\/\/*\.wangbiwu\.com\/vod\/playhb\/*     url script-response-body   https://raw.githubusercontent.com/cefv12/xxys/xxys/xxyswxk.js
+^https:\/\/*\.wangbiwu\.com\/vod\/show\/*     url script-response-body   https://raw.githubusercontent.com/cefv12/xxys/xxys/xxyswxk.js
