--- a/xxys.conf
+++ b/xxys.conf
@@ -8,4 +8,8 @@ hostname=*.wangbiwu.com,a1235.hnhx360.com,utoken.umeng.com
 ^https:\/\/*\.wangbiwu\.com\/init?v=3.4.0   url script-response-body  https://raw.githubusercontent.com/cefv12/cefv/111/quguanggao.js
 ^https:\/\/*\.wangbiwu\.com\/getGlobalData?v=3.4.0   url script-response-body  https://raw.githubusercontent.com/cefv12/cefv/111/XXYS.js
 ^https:\/\/*\.wangbiwu\.com\/index?tab=0   url script-response-body https://raw.githubusercontent.com/cefv12/cefv/111/guankan.js
-^https:\/\/*\.wangbiwu\.com\/ucp\/ucp\/task\/qrcode  url script-response-body  https://raw.githubusercontent.com/cefv12/cefv/111/XXYS.js
+^https:\/\/*\.wangbiwu\.com\/ucp\/task\/qrcode  url script-response-body  https://raw.githubusercontent.com/cefv12/cefv/111/XXYS.js
+^https:\/\/*\.wangbiwu\.com\/ucp\/task\/index  url script-response-body  https://raw.githubusercontent.com/cefv12/cefv/111/XXYS.js
+^https:\/\/*\.wangbiwu\.com\/playlog\/listing?timeline=?&page=?  url script-response-body  https://raw.githubusercontent.com/cefv12/cefv/111/XXYS.js
+^https:\/\/*\.wangbiwu\.com\/ucp\/task\/sign  url script-response-body  https://raw.githubusercontent.com/cefv12/cefv/111/XXYS.js
+^https:\/\/*\.wangbiwu\.com\/ucp\/account\/index url script-response-body  https://raw.githubusercontent.com/cefv12/cefv/111/XXYS.js
