--- a/YouTube.conf
+++ b/YouTube.conf
@@ -1,4 +1,4 @@
-hostname = *.googlevideo.com,*.youtube\.com
+hostname = *.googlevideo.com,*.youtube.com,*.youtube\.com,*.youtube.*
 
 #新版YouTube去广告
 # 油管去广告
